devtools/manifests/profiles/metrics/prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: console-prometheus
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    prometheus: console-prometheus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console-prometheus
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.${CLUSTER_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console-prometheus
                port:
                  number: 9090
